<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="Home_BottomNav_Home">Home</string>
    <string name="Home_BottomNav_Rec">Rec</string>
    <string name="Home_BottomNav_Camera">Camera</string>
    <string name="Home_BottomNav_Forms">Forms</string>
    <string name="Home_BottomNav_Reports">Reports</string>
    <string name="Home_BottomNav_Uwazi">Uwazi</string>
    <string name="Home_BottomNav_Settings" translatable="false">Settings</string>
    <string name="Rename_name_Hint">Name</string>
    <!-- content description -->
    <string name="action_go_to_homescreen">go to home screen</string>
    <string name="action_cancel">cancel</string>
    <string name="action_show_password">show password</string>
    <string name="action_hide_password">hide password</string>
    <string name="action_show_pin">show pin</string>
    <string name="action_hide_pin">hide pin</string>
    <string name="action_delete">delete</string>
    <string name="action_go_back">go back</string>
    <string name="Migration_Failed_Title" translatable="false">Migration Failed"</string>
    <string name="Migration_Failed_Description" translatable="false">The database migration failed. If you have a backup of your files, please reinstall Tella and re-import your files into Tella. If you don\'t have a backup and you lost your files, do not delete Tella and contact us: contact@tella-app.org</string>
</resources>